[project]
name = "site-mapper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Dempsey", email = "avdempsey@archive.org" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "joblib>=1.3",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "playwright>=1.42",
]

[project.scripts]
site-mapper = "site_mapper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]
